--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "solvative_ui_clone",
+  "homepage": "https://ravisharma607.github.io/solvative_ui_clone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,12 +10,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
